<resources>
    <!--App Name-->
    <string name="app_name">Blood Care</string>

    <!--Bottom Navigation-->
    <string name="text_label_home">Home</string>
    <string name="text_label_find">Find</string>
    <string name="text_label_profile">Profile</string>

    <!--Sign In-->
    <string name="text_label_email_id">Email Id</string>
    <string name="text_label_password">Password</string>
    <string name="text_label_sign_in">Sign In</string>
    <string name="text_label_forgot_password">Forgot Password</string>
    <string name="text_label_no_account_yet">Don\'t have an account yet?</string>
    <string name="text_error_field_empty">Field cannot be empty</string>
    <string name="text_error_email_id">Invalid Email Id</string>
    <string name="text_error_password">Password cannot be less than 6 digits</string>

    <!--Sign Up-->
    <string name="text_label_full_name">Full Name</string>
    <string name="text_label_mobile_number">Mobile Number</string>
    <string name="text_label_location">Location</string>
    <string name="text_label_blood_group">Blood Group</string>
    <string name="text_label_sign_up">Sign Up</string>
    <string name="text_label_already_have_an_account">Already have an account?</string>
    <string name="text_label_invalid_mobile_number">Invalid Mobile Number</string>

    <!--Forgot Password-->
    <string name="text_label_send_otp">Send OTP</string>
    <string name="text_label_relation">Relation</string>
    <string name="text_label_submit_request">Submit Request</string>

    <string name="text_error_full_name">FullName cannot be empty</string>
    <string name="text_error_relation">Relation cannot be empty</string>
    <string name="text_error_blood_group">Blood Group cannot be empty</string>
    <string name="text_error_location">Location cannot be empty</string>
    <string name="text_error_internet">No internet connection</string>
    <string name="text_error_invalid_credentials">Invalid credentials</string>
    <string name="text_sign_up_successfull">Signed up successfully</string>
    <string name="text_message_request_success">Request sent successfully</string>
    <string name="text_label_no_data_found">No Data Found</string>
    <string name="text_alert_title_close_app">Close App</string>
    <string name="text_alert_message_confirm">Are you sure you want to exit from this app?</string>
</resources>