<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/nav_main"
    app:startDestination="@id/homeFragment">

    <fragment
        android:id="@+id/homeFragment"
        android:name="com.devdays.bloodcare.ui.home.HomeFragment"
        android:label="@string/text_label_home" />
    <fragment
        android:id="@+id/findFragment"
        android:name="com.devdays.bloodcare.ui.find.FindFragment"
        android:label="@string/text_label_find" />
    <fragment
        android:id="@+id/profileFragment"
        android:name="com.devdays.bloodcare.ui.profile.ProfileFragment"
        android:label="@string/text_label_profile" />
    <fragment
        android:id="@+id/signInFragment"
        android:name="com.devdays.bloodcare.ui.signin.SignInFragment"
        android:label="SignInFragment" />
</navigation>