<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="findViewModel"
            type="com.devdays.bloodcare.ui.find.FindViewModel" />
    </data>

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:fillViewport="true"
        tools:context=".ui.find.FindFragment">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/material_dimen_mdpi">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayoutFindFullName"
                style="@style/AppTheme.TextInputLayout"
                android:layout_width="@dimen/material_dimen_constraint"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/textInputEditTextFindFullName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/text_label_full_name"
                    android:inputType="textPersonName"
                    android:maxLines="1"
                    android:text="@={findViewModel.MFindFullName}" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayoutFindMobileNumber"
                style="@style/AppTheme.TextInputLayout"
                android:layout_width="@dimen/material_dimen_constraint"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/material_dimen_mdpi"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textInputLayoutFindFullName">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/textInputEditTextFindMobileNumber"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/text_label_mobile_number"
                    android:inputType="phone"
                    android:maxLines="1"
                    android:text="@={findViewModel.MFindMobileNumber}" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayoutFindRelation"
                style="@style/AppTheme.TextInputLayout"
                android:layout_width="@dimen/material_dimen_constraint"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/material_dimen_mdpi"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textInputLayoutFindMobileNumber">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/textInputEditTextFindRelation"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/text_label_relation"
                    android:inputType="textCapWords"
                    android:maxLines="1"
                    android:text="@={findViewModel.MFindRelation}" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayoutFindBloodGroup"
                style="@style/AppTheme.TextInputLayout"
                android:layout_width="@dimen/material_dimen_constraint"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/material_dimen_mdpi"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textInputLayoutFindRelation">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/textInputEditTextFindBloodGroup"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/text_label_blood_group"
                    android:inputType="textCapCharacters"
                    android:maxLines="1"
                    android:text="@={findViewModel.MFindBloodGroup}" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayoutFindLocation"
                style="@style/AppTheme.TextInputLayout"
                android:layout_width="@dimen/material_dimen_constraint"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/material_dimen_mdpi"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textInputLayoutFindBloodGroup">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/textInputEditTextFindLocation"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/text_label_location"
                    android:inputType="textCapSentences"
                    android:maxLines="1"
                    android:text="@={findViewModel.MFindLocation}" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/materialButtonFindSubmitRequest"
                style="@style/AppTheme.Button.Dark"
                android:layout_width="@dimen/material_dimen_constraint"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/material_dimen_mdpi"
                android:layout_marginBottom="@dimen/material_dimen_xxxhdpi"
                android:onClick="@{()->findViewModel.onClickFindSubmitRequest()}"
                android:text="@string/text_label_submit_request"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textInputLayoutFindLocation"
                app:layout_constraintVertical_bias="0" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>
</layout>