<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="signUpViewModel"
            type="com.devdays.bloodcare.ui.signup.SignUpViewModel" />
    </data>

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        tools:context=".ui.signup.SignUpFragment">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/material_dimen_mdpi">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayoutSignUpFullName"
                style="@style/AppTheme.TextInputLayout"
                android:layout_width="@dimen/material_dimen_constraint"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/material_dimen_mdpi"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/textInputEditTextSignUpFullName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/text_label_full_name"
                    android:inputType="textPersonName"
                    android:lines="1"
                    android:text="@={signUpViewModel.MSignUpFullName}" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayoutSignUpEmailId"
                style="@style/AppTheme.TextInputLayout"
                android:layout_width="@dimen/material_dimen_constraint"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/material_dimen_mdpi"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textInputLayoutSignUpFullName">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/textInputEditTextSignUpEmailId"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/text_label_email_id"
                    android:inputType="textEmailAddress"
                    android:lines="1"
                    android:text="@={signUpViewModel.MSignUpEmailId}" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayoutSignUpMobileNumber"
                style="@style/AppTheme.TextInputLayout"
                android:layout_width="@dimen/material_dimen_constraint"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/material_dimen_mdpi"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textInputLayoutSignUpEmailId">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/textInputEditTextSignUpMobileNumber"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/text_label_mobile_number"
                    android:inputType="phone"
                    android:lines="1"
                    android:text="@={signUpViewModel.MSignUpMobileNumber}" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayoutSignUpPassword"
                style="@style/AppTheme.TextInputLayout"
                android:layout_width="@dimen/material_dimen_constraint"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/material_dimen_mdpi"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textInputLayoutSignUpMobileNumber">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/textInputEditTextSignUpPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/text_label_password"
                    android:inputType="textPassword"
                    android:lines="1"
                    android:text="@={signUpViewModel.MSignUpPassword}" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayoutSignUpLocation"
                style="@style/AppTheme.TextInputLayout"
                android:layout_width="@dimen/material_dimen_constraint"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/material_dimen_mdpi"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textInputLayoutSignUpPassword">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/textInputEditTextSignUpLocation"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/text_label_location"
                    android:inputType="text"
                    android:lines="1"
                    android:text="@={signUpViewModel.MSignUpLocation}" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayoutSignUpBloodGroup"
                style="@style/AppTheme.TextInputLayout"
                android:layout_width="@dimen/material_dimen_constraint"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/material_dimen_mdpi"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textInputLayoutSignUpLocation">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/textInputEditTextSignUpBloodGroup"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/text_label_blood_group"
                    android:inputType="text"
                    android:lines="1"
                    android:text="@={signUpViewModel.MSignUpBloodGroup}" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/materialButtonSignUp"
                style="@style/AppTheme.Button.Dark"
                android:layout_width="@dimen/material_dimen_constraint"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/material_dimen_xhdpi"
                android:layout_marginTop="@dimen/material_dimen_xhdpi"
                android:layout_marginEnd="@dimen/material_dimen_xhdpi"
                android:layout_marginBottom="@dimen/material_dimen_xhdpi"
                android:onClick="@{()->signUpViewModel.onClickSignUp()}"
                android:text="@string/text_label_sign_up"
                app:layout_constraintBottom_toTopOf="@+id/materialTextViewSignUpSignIn"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textInputLayoutSignUpBloodGroup"
                app:layout_constraintVertical_bias="0" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/materialTextViewSignUpSignIn"
                spannableString="@{@string/text_label_already_have_an_account}"
                android:layout_width="@dimen/material_dimen_constraint"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:onClick="@{()->signUpViewModel.onClickSignUpSignIn()}"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>
</layout>